# compphysthree

./: .gitignore  README.md
ue0/: aufg1.m
ue1/files/: laplace.m
ue1/src/: cg.py
ue1/tex/: cp3_ue_1.aux  cp3_ue_1.out  cp3_ue_1.tex  cp3_ue_1.toc
ue10/scripts/: .2d_measurements_plots.py.swp  .measurements_plots.py.swp  2_d_measurements.txt  2d_measurements_plots.py  2d_run_sim  3_d_measurements.txt  3d_measurements_plots.py  3d_run_sim  4_d_measurements.txt  4d_measurements_plots.py  4d_run_sim  conv_2d  conv_2d.txt  conv_2d_plots.py  conv_nd  conv_nd.txt  conv_nd_plots.py
ue10/src/: CMakeCache.txt  CMakeLists.txt  Makefile  check  check.cu  cmake_install.cmake  geom_pbc.cu  geom_pbc.h  global.h  metropolis.cu  metropolis.h  randgpu.cu  randgpu.h  run  run.cu  spin.cu  spin.h
ue10/tex/: cp3_ue_10.aux  cp3_ue_10.blg  cp3_ue_10.fdb_latexmk  cp3_ue_10.fls  cp3_ue_10.tex  cp3_ue_10.toc
ue2/aufg1/: Makefile
ue2/aufg2/: Makefile
ue2/tex/: cp3_ue_2.aux  cp3_ue_2.tex  cp3_ue_2.toc
ue3/aufg1/: Makefile
ue3/aufg2/: Makefile  laplace  laplaceGPU.cu
ue3/tex/: cp3_ue_3.tex
ue4/: Makefile
ue4/measurements/: efficiency.txt  hand_paste_2  hand_pasted_times_aufg_5  (+1 more)
ue5/: Makefile
ue6/: Makefile
ue6/opt/uebung6/: CMakeLists.txt
ue7/: Makefile
ue7/src/: CMakeLists.txt  action.cu  action.h  eigener_code.cu  eigener_code.h  tests.cu  tests.h  therm.cu
ue8/: Makefile
ue9/src/: CMakeLists.txt  added_stuff.cu  added_stuff.h  added_stuff_gpu.cu  added_stuff_gpu.h  check.cu  global.h  metropolis.cu  metropolis.h  randgpu.cu  randgpu.h  run.cu  spin.cu  spin.h
(+85 files in other folders)
